# wasa-sim

./: .gitignore  CMakeLists.txt  EDep_macro.C  README.md  full_sim_install_lucas.sh  rootls_like.C
Documentation/: slidingWindowClustering.md
Scripts/: rootFilePreProcess.cpp
dEdxTable/: dedx_table_generator.cpp
include/: Acceptance.hpp  AnalysisHistograms.hpp  BranchManager.hpp  Calibration.hpp  ChEfficiency.hpp  Clustering.hpp  DEDXTable.hpp  EventDisplay.hpp  EventLoop.hpp  EventVariables.hpp  PIDEfficiency.hpp  ParticleID.hpp  PhotonMatch.hpp  Pi0Acceptance.hpp  Pi0Efficiency.hpp  PlotUtils.hpp  RecoEvent.hpp  RunABCD.hpp  SelectionCuts.hpp  SelectionHistograms.hpp  Structures.hpp  TruePhotonCalc.hpp  Utils.hpp
macros/: AcceptanceStudy.C  plot_seed_edep.C
slurm_install_scripts/: install_geant4.slurm  install_hibeam_g4.slurm  install_root.slurm  install_vgm.slurm
src/: Acceptance.cpp  Analysis.cpp  Calibration.cpp  ChEfficiency.cpp  Clustering.cpp  EventDisplay.cpp  EventLoop.cpp  EventVariables.cpp  PIDEfficiency.cpp  ParticleID.cpp  PhotonMatch.cpp  Pi0Acceptance.cpp  Pi0Efficiency.cpp  PlotUtils.cpp  RecoEvent.cpp  RunABCD.cpp  TruePhotonCalc.cpp  pi0Analysis.cpp  pi0Rec.cpp  pi0_k-d_DBSCAN.cpp  rootFilePreProcess  rootFilePreProcess.cpp  slidingWindowClustering.cpp
srcVertex/: VertexFinder_New.py  hibeam_vertex_finder_control_full_debug_v50.py
